# Interview-Mocker-Backend

./: .env.example  .gitignore  .windsurfrules  AI数字人面试微服务设计.md  README.md  check_config.py  pyproject.toml  requirements.txt  run.py  test_sse.py  后端总体架构.md  数据表设计.md
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: LLM调用模块说明.md  前端接入指南.md  前端调用说明书-认证与权限.md  前端调用说明书-题库.md  团队开发指南.md  数字人面试服务架构设计V2.md  数据表设计.md  独立服务架构与数据库同步方案.md  知识库设计.md  身份认证设计.md
interview_avatar_service/: __init__.py  main.py
interview_avatar_service/clients/: __init__.py  main_service.py
main_service/: __init__.py  main.py
main_service/api/: __init__.py
main_service/api/v1/: __init__.py  auth.py  health.py  interviews.py  knowledge.py  positions.py  questions.py  users.py
main_service/core/: __init__.py  config.py  database.py  dependencies.py  security.py
main_service/models/: __init__.py
main_service/schemas/: __init__.py  common.py  knowledge.py  position.py  question.py  user.py
main_service/schemas/auth/: __init__.py  user.py
main_service/schemas/interview/: __init__.py  interview.py
main_service/schemas/knowledge/: __init__.py
main_service/schemas/position/: __init__.py
main_service/schemas/question/: __init__.py  extraction.py  question.py
main_service/services/: __init__.py  auth_service.py  position_service.py  question_service.py
main_service/services/auth/: __init__.py  auth_service.py
main_service/services/knowledge/: __init__.py  knowledge_service.py
main_service/services/position/: __init__.py
main_service/services/question/: __init__.py  extraction_task_manager.py  question_extraction_service.py  (+1 more)
migrations/: env.py
migrations/versions/: 5f7148147854_initial_schema.py  8928f770c17e_add_community_status_to_question_banks.py
scripts/: migrate.py  start_services.py
shared/config/: __init__.py  settings.py
shared/database/: __init__.py  connection.py
shared/models/: __init__.py  base.py  evaluation.py  interview.py  knowledge.py  position.py  question.py  system.py  user.py
shared/utils/: __init__.py  file_parser.py  json_parser.py  text_chunker.py
tests/: conftest.py  test_auth.py  test_health.py
(+4 files in other folders)
